[gd_scene load_steps=2 format=3 uid="uid://d23by7glm6c03"]

[ext_resource type="Script" uid="uid://bffb3a0wpaopd" path="res://screen.gd" id="1_vouji"]

[node name="Screen" type="Node2D"]
script = ExtResource("1_vouji")

[node name="ButtonList" type="VBoxContainer" parent="."]
offset_left = 64.0
offset_top = 208.0
offset_right = 240.0
offset_bottom = 239.0
alignment = 1
metadata/_edit_group_ = true

[node name="HFlowContainer" type="HFlowContainer" parent="."]
offset_left = 320.0
offset_top = 192.0
offset_right = 832.0
offset_bottom = 232.0

[node name="StackOutput" type="Label" parent="."]
offset_left = 376.0
offset_top = 448.0
offset_right = 776.0
offset_bottom = 544.0
text = "Stack:"
horizontal_alignment = 1

[node name="RunButton" type="Button" parent="."]
offset_left = 520.0
offset_top = 144.0
offset_right = 635.0
offset_bottom = 175.0
text = "Run"

[node name="Clear" type="Button" parent="."]
offset_left = 896.0
offset_top = 288.0
offset_right = 1011.0
offset_bottom = 319.0
text = "Clear
"

[connection signal="pressed" from="RunButton" to="." method="runBytecode"]
[connection signal="pressed" from="Clear" to="." method="_onClearPressed"]
